<resources>
    <string name="app_name">SensorsExperimentation</string>

    <string name="action_settings">Settings</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <string name="select_wave_form">Select a wave form:</string>
    <string name="sine">Sine</string>
    <string name="sawtooth">Sawtooth</string>
    <string name="square">Square</string>
    <string name="triangle">Triangle</string>

    <string name="no_ir_sensor">Your phone appears to not have a Motorola IR sensor; this app will not work.</string>
</resources>
