<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical" >

    <Button
        android:id="@+id/start_stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_wave_form" />

    <RadioGroup
        android:id="@+id/wave_form_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/sine_button" >

        <RadioButton
            android:id="@+id/sine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sine" />

        <RadioButton
            android:id="@+id/sawtooth_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sawtooth" />

        <RadioButton
            android:id="@+id/square_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square" />

        <RadioButton
            android:id="@+id/triangle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triangle" />

    </RadioGroup>

</LinearLayout>
